gc测试类，jvm参数补全